--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <main>
 
                 <div class="blockset1">
-                    <div class="green"><img src="images/screen 1 1.png" alt=""></div>
+                    <div class="green">
+                        <img id="tastee" src="images/Tastee.png" alt="">
+                        </div>
                     <div class="yellow">
                         <h1>TASTEE APP</h1>
                         <br><br>
@@ -72,7 +74,8 @@
                 </div>
 
                 <div class="blockset2">
-                    <div class="red"><img src="images/USDOL.png" alt=""></div>
+                    <div class="red">
+                        <img id="DOL" src="images/DOL.png" alt=""></div>
                     <div class="blue">
                         <h1>U.S. Department of Labor</h1>
                         <br><br>
@@ -83,7 +86,8 @@
                 </div>
 
                 <div class="blockset3">
-                    <div class="yellow2"><img src="images/SAFOODBANK.png" alt=""></div>
+                    <div class="yellow2">
+                        <img id="foodbank" src="images/Foodbank.png" alt=""></div>
                     <div class="green2">
                         <h1>SA FOOD BANK</h1>
                         <br><br>
@@ -93,7 +97,8 @@
                 </div>
 
                 <div class="blockset4">
-                    <div class="blue2"><img src="images/Molecular 1.png" alt=""></div>
+                    <div class="blue2">
+                        <img id="sideprojects" src="images/weightless.jpg" alt=""></div>
                     <div class="red2">
                         <h1>SIDE PROJECTS</h1>
                         <br><br>
