--- a/About.html
+++ b/About.html
@@ -90,14 +90,43 @@
             <ul role="list" class="w-list-unstyled">
               <li class="featured-item-wrap">
                 <div class="speaking-text">User Research</div>
-               <br> <div class="speaking-detail">UX Mapping, User Testing, Persona Creation, Agile processs. </div>
+               <br> <div class="speaking-detail">
+                 <ul id="skill set">
+               Usability Testing, 
+               Surveys, 
+               User interviews, 
+                Field Research, 
+              <br> Diary Study, 
+                Card Sorting,
+               Concept Testing,
+                 A/B Testing,
+                <br> Competitor Analysis, 
+                 Collaboration
+                 </ul>
+                </div>
               </li>
               <li class="featured-item-wrap">
                 <div class="speaking-text">User Interface Design</div>
-                <br><div class="speaking-detail">lorem</div>
+                <br><div class="speaking-detail">
+                  Visual Design, 
+                  Grids, 
+                  Information Architecture, 
+                  UI Icons, 
+                 <br> Typography, 
+                  Interation Design, 
+                  Heuristic Evaluation, 
+                 <br> Motion Design, 
+                  Prototyping, 
+                  App Design</div>
                 <li class="featured-item-wrap">
                   <div class="speaking-text">Web Development</div>
-                  <br><div class="speaking-detail">lorem</div>
+                  <br><div class="speaking-detail">
+                    Visual Studio Code, 
+                    Dreamweaver, 
+                  GitHub, 
+                 <br> HTML5, 
+                  CSS, 
+                  Javascript </div>
                 </li>
               </li>
             </ul>
