--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baldemar Villarreal</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
+    
     <header>
         <div>
             <nav>
@@ -25,7 +27,7 @@
                             <p class="item">ABOUT</p>
                         </a>
                     </li>
-                    <li> <a href="#">
+                    <li> <a class="workbutton" href="#">
                             <p class="item">WORK</p>
                         </a>
                     </li>
@@ -64,7 +66,7 @@
                 <div class="blockset1">
                     <div class="green">
                         <img id="tastee" src="images/Tastee.png" alt="">
-                        </div>
+                    </div>
                     <div class="yellow">
                         <h1>TASTEE APP</h1>
                         <br><br>
@@ -75,7 +77,8 @@
 
                 <div class="blockset2">
                     <div class="red">
-                        <img id="DOL" src="images/DOL.png" alt=""></div>
+                        <img id="DOL" src="images/DOL.png" alt="">
+                    </div>
                     <div class="blue">
                         <h1>U.S. Department of Labor</h1>
                         <br><br>
@@ -87,7 +90,8 @@
 
                 <div class="blockset3">
                     <div class="yellow2">
-                        <img id="foodbank" src="images/Foodbank.png" alt=""></div>
+                        <img id="foodbank" src="images/Foodbank.png" alt="">
+                    </div>
                     <div class="green2">
                         <h1>SA FOOD BANK</h1>
                         <br><br>
@@ -98,7 +102,8 @@
 
                 <div class="blockset4">
                     <div class="blue2">
-                        <img id="sideprojects" src="images/weightless.jpg" alt=""></div>
+                        <img id="sideprojects" src="images/weightless.jpg" alt="">
+                    </div>
                     <div class="red2">
                         <h1>SIDE PROJECTS</h1>
                         <br><br>
