--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <p class="item">ABOUT</p>
                         </a>
                     </li>
-                    <li> <a class="workbutton" href="#">
+                    <li> <a href="#work">
                             <p class="item">WORK</p>
                         </a>
                     </li>
@@ -63,7 +63,7 @@
         <div>
             <main>
 
-                <div class="blockset1">
+                <div id="work" class="blockset1">
                     <div class="green">
                         <img id="tastee" src="images/Tastee.png" alt="">
                     </div>
