--- a/About.html
+++ b/About.html
@@ -13,6 +13,8 @@
   <header>
     <div>
       <nav>
+        <div>
+          
         <ul class="nav">
 
           <li>
@@ -25,7 +27,7 @@
               <p class="item">ABOUT</p>
             </a>
           </li>
-          <li> <a href="#">
+          <li> <a href="index.html#work">
               <p class="item">WORK</p>
             </a>
           </li>
@@ -35,7 +37,7 @@
           </li>
 
         </ul>
-
+      </div>
       </nav>
      
 
