--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <div>
             <nav>
+                <div>
                 <ul class="nav">
 
                     <li>
@@ -37,7 +38,7 @@
                     </li>
 
                 </ul>
-
+            </div>
             </nav>
             <div>
 
